fixed the css sheet to correct alignment for class h3. also added comments in CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ body {
     display: inline-block;
     margin-left: 25px;
 }
-
+/*Section containing content set up as articles on the page*/
 a {
     color: #ffffff;
     text-decoration: none;
@@ -93,7 +93,7 @@ p {
     float: right;
     margin-left: 25px;
 }
-
+/*information set up as an aside for furthur information on the page*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -105,12 +105,12 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead, .benefit-brand, .benefit-cost  {
+.benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-lead, .benefit-brand, .benefit-cost h3 {
+.benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -127,7 +127,7 @@ p {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
-
+/*uses h2 which I assume is for emphasis*/
 .footer h2 {
     font-size: 20px;
 }
